# checkpp

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  install_dependences.sh
.devcontainer/: Dockerfile  Dockerfile.sh  devcontainer.json  docker_entrypoint.sh
.engram/: engram.db  engram.db-shm  engram.db-wal
.opencode/skills/release-workflow/: SKILL.md
.opencode/skills/vscode-task-button/: SKILL.md
clang-tidy-module/: CMakeLists.txt  CompanyModule.cpp  company_module.cpp
clang-tidy-module/checks/: BooleanVariableCheck.cpp  ClassNameCheck.cpp  ConstructorInitListCheck.cpp  ConstructorInitListCheck.hpp  EnumNameCheck.cpp  EnumValueCheck.cpp  FileNamingCheck.cpp  FunctionNameCheck.cpp  IncludeOrderCheck.cpp  IncludeOrderCheck.hpp  MemberVariableCheck.cpp  MemberVariableCheck.hpp  NamespaceNameCheck.cpp  NoUsingNamespaceStdCheck.cpp  StructNameCheck.cpp  StructNameCheck.hpp  TemplateParameterCheck.cpp  VariableNameCheck.cpp  boolean_variable_check.cpp  boolean_variable_check.hpp  class_name_check.cpp  class_name_check.hpp  common.hpp  constructor_init_list_check.cpp  constructor_init_list_check.hpp  enum_name_check.cpp  enum_name_check.hpp  enum_value_check.cpp  enum_value_check.hpp  file_naming_check.cpp  file_naming_check.hpp  function_name_check.cpp  function_name_check.hpp  include_order_check.cpp  include_order_check.hpp  line_length_check.cpp  line_length_check.hpp  member_variable_check.cpp  member_variable_check.hpp  namespace_name_check.cpp  (+9 more)
cmake/: embed_binary_to_cpp.py
config/: ignore_paths.txt  rules.yaml
docs/: tool-development.md
include/: config.hpp  embedded_clang_tidy_module.hpp  runner.hpp  severity.hpp
src/: config.cpp  embedded_clang_tidy_module.cpp  main.cpp  runner.cpp
tools/programs/: CMakeLists.txt  release_tool.cpp
tools/tasks/: build.sh  release.sh  run.sh  run_opencode_web_gui.sh
